trying to fix overflow text

--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -189,8 +189,10 @@ h2 {
 }
 
 .river-text {
+    min-height: 200px;
     height: 200px;
     overflow: scroll; 
+
 }
 
 footer {
